add search in admin and fix cors